@@ -1,3 +1,4 @@
+/.zanata-cache
 /ABOUT-NLS
 /INSTALL
 /aclocal.m4
