@@ -1,3 +1,8 @@
+2015-03-17  Miloslav Trmač  <mitr@redhat.com>
+
+	* .tx/config: Remove.
+	* zanata.xml: Add.  To pull updated translations, run (zanata-cli pull).
+
 2015-01-06  Vratislav Podzimek  <vpodzime@redhat.com>
 
 	* lib/libvolume_key.h: Stop including <config.h>, which we don't
